# nc-modem

./: .gitattributes  README.md  lockband  setup.sh  uninstall.sh
.github/workflows/: build.yml
webui/: Cargo.toml  README.md
webui/src/: api.rs  at.rs  bands.rs  http.rs  intel.rs  json.rs  main.rs  modem.rs
webui/web/: app.js  index.html  style.css
